- https://github.com/eclipse-syson/syson/issues/183[#183] [diagrams] Expand Definition/Usage nodes in general-view & actionflow-view when a compartment item is created
- https://github.com/eclipse-syson/syson/issues/180[#180] [diagrams] Handle Allocation definition and Allocation usage
- [syson] Add icons for all elements

=== New features

- https://github.com/eclipse-syson/syson/issues/147[#147] [general-view] Refactor compartments of `RequirementDefinition` and `RequirementUsage` to better fit the specification and examples.
- https://github.com/eclipse-syson/syson/issues/196[#196] [export] SysML standard serialization format

== v2024.3.0

=== Breaking changes

- Refactor Node Descriptions Providers in General View: all Definitions and Usages Node Descriptions Providers (e.g. `PartDefinitionNodeDescriptionProvider` or `ItemUsageNodeDescriptionProvider`) have been replaced by two new Node Descriptions Providers: `DefinitionNodeDescriptionProvider` and `UsageNodeDescriptionProvider`.
- Switch to Sirius Web 2024.3.0: `GeneralViewRegistryConfigurer` has been renamed to `GeneralViewDescriptionProvider` as it now implements `IEditingContextRepresentationDescriptionProvider` instead of `IRepresentationDescriptionRegistryConfigurer`. Same for `InterconnectionViewRegistryConfigurer`.
`SysMLv2ObjectService` has been renamed into `SysMLv2LabelService` as it now implements `ILabelServiceDelegate` instead of `IObjectServiceDelegate`.
- https://github.com/eclipse-syson/syson/issues/93[#93] [diagrams] Refactor diagrams code with creation of the diagram-common-view module to gather all cross diagram tools:
  * `DescriptionNameGenerator` is no longer a static class with static methods.
  There should be one name generator per diagram owning the diagram prefix used to prefix all descriptions for this diagram (for instance `GVDescriptionNameGenerator`)

=== Dependency update
