@@ -37,6 +37,7 @@
 - https://github.com/eclipse-syson/syson/issues/183[#183] [diagrams] Expand Definition/Usage nodes in general-view & actionflow-view when a compartment item is created
 - https://github.com/eclipse-syson/syson/issues/180[#180] [diagrams] Handle Allocation definition and Allocation usage
 - [syson] Add icons for all elements
+- https://github.com/eclipse-syson/syson/issues/204[#204] [interconnection-view] Change label position (from inside to outside) for ports (Border Nodes)
 
 === New features
 
